assets/css/style.css
body {
    display: grid;
}

.site-header {
    align-content: center;
}

.site-header-logo {
    display: inline;
    vertical-align: middle;
    margin: 1rem;
}

.site-header-title {
    margin: 0;
    display: inline;
    vertical-align: middle;
}

/* Temporary styling to assist with visualising layout */
.site-header {
    background: lightpink;
}

.nav-main {
    background: lightgreen;
}

body > main {
    background: lightblue;
}

body > footer {
    background: lightgoldenrodyellow;
}

article {
    background: antiquewhite;
}

aside {
    background: lightcyan;
}

/* Mobile layout */
body {
    grid-template-columns: 1fr 64px;
    grid-template-rows: 80px 1fr 8rem;
    grid-template-areas:
        "header nav"
        "main main"
        "footer footer";
}

.site-header {
    grid-area: header;
    position: sticky;
    top: 0;
}

.nav-main {
    grid-area: nav;
    position: sticky;
    top: 0;
    align-content: center;
    text-align: center;
}

.menu-button {
    width: 32px;
    height: auto;
}

.nav-main-links {
    display: none;
}

main {
    grid-area: main;
}

main > article {
    margin: 1rem 2rem;
}

.site-footer {
    grid-area: footer;
}

/* Desktop layout */
@media screen and (min-width: 1280px) {
    body {
        grid-template-columns: 1fr;
        grid-template-rows: 80px 3rem 1fr 8rem;
        grid-template-areas:
            "header"
            "nav"
            "main"
            "footer";
    }

    .menu-button {
        display: none;
    }

    .nav-main-links {
        display: revert;
    }

    .nav-main-links li {
        display: inline;
        vertical-align: center;
    }

    main {
        width: 80%;
        margin: auto;
        display: grid;
        grid-template-columns: 3fr 3fr 2fr;
        grid-template-rows: auto;
        align-content: start;
        grid-gap: 1rem;
    }

    main > article {
        margin: 0;
    }

    main > article:nth-child(odd) {
        grid-column: 1;
    }

    main > article:nth-child(even) {
        grid-column: 2;
    }

    main > aside {
        grid-column: 3;
        grid-row: 1;
    }
}

